--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,5 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".flow.MainActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
