--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,9 @@
         android:id="@+id/item_menu_main_novo_tipo"
         android:title="Novo tipo" />
     <item
+        android:id="@+id/item_menu_main_pagar"
+        android:title="Pagar" />
+    <item
         android:id="@+id/item_menu_main_sair"
         android:title="Sair" />
 
