--- a/app/src/main/res/layout/activity_adicionar_debito.xml
+++ b/app/src/main/res/layout/activity_adicionar_debito.xml
@@ -19,7 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/descricao_add_debito"
         android:layout_margin="8dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:text="Tipo do débito"/>
     <Spinner
         android:id="@+id/tipo_add_debito"
         android:layout_width="match_parent"
@@ -48,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_below="@id/qtd_parcela_add_debito"
-        android:hint="Dia de vencimanto"
+        android:hint="Dia de vencimento"
         android:inputType="number"/>
     <Button
         android:id="@+id/bt_salvar_add_debito"
